# penny

./: Cargo.toml  Justfile  README.md  config.toml  dist-workspace.toml  flake.nix  module.nix  pennies.toml  penny.toml  todo.md  yarp.toml
.github/workflows/: ci.yml  image.yml  release.yml
docs/: biome.json  package.json  pnpm-lock.yaml
docs/content/docs/: building-from-source.mdx  index.mdx  installation.mdx  meta.json  quick-start.mdx
docs/content/docs/cli/: check.mdx  dokku.mdx  index.mdx  meta.json  serve.mdx  systemd.mdx
docs/content/docs/configuration/: adaptive-wait.mdx  global-options.mdx  index.mdx  meta.json  per-app-options.mdx  tls.mdx
docs/content/docs/deployment/: dokku.mdx  meta.json  systemd.mdx
docs/content/docs/features/: also-warm.mdx  cold-start-pages.mdx  dashboard.mdx  meta.json  start-stop-commands.mdx
docs/public/: install.sh  robots.txt  site.webmanifest
docs/scripts/: generate-favicons.mjs
docs/src/app/: global.css  layout.tsx  not-found.tsx  sitemap.ts
docs/src/app/(home)/: page.tsx
docs/src/app/api/search/: route.ts
docs/src/app/builder/: layout.tsx  page.tsx
docs/src/app/docs/: layout.tsx
docs/src/app/docs/[[...slug]]/: page.tsx
docs/src/app/og/builder/image.png/: route.tsx
docs/src/app/og/docs/[...slug]/: route.tsx
docs/src/app/og/home/image.png/: route.tsx
docs/src/components/: copy-install-command.tsx  how-it-works-animation.tsx  penny-logo.tsx  provider.tsx  search-dialog.tsx  toml-builder.tsx  toml-preview.tsx
docs/src/components/builder/: form-field.tsx
docs/src/lib/: layout.shared.tsx
penny-vhosts/: install  plugin.toml  post-domains-update  post-proxy-ports-update  proxy-build-config  proxy-clear-config  proxy-disable  proxy-enable
penny-vhosts/subcommands/: report  set
src/: acme.rs  api.rs  auth.rs  challenge.rs  check.rs  collector.rs  config.rs  db.rs  dokku.rs  main.rs  proxy.rs  reporter.rs  systemd.rs  tls.rs  types.rs
ui/: .cta.json  biome.json  index.html  package.json  pnpm-lock.yaml
ui/public/: manifest.json
ui/src/: env.ts  main.tsx  routeTree.gen.ts  styles.css
ui/src/components/: ErrorBanner.tsx  Header.tsx  LoginPage.tsx  PageContainer.tsx  StatCard.tsx  TimeRangeSelector.tsx  demo.FormComponents.tsx
ui/src/components/ui/: calendar.tsx  select.tsx  skeleton.tsx  slider.tsx
ui/src/contexts/: AuthContext.tsx
ui/src/lib/: api.ts  auth.ts  demo-store-devtools.tsx  error-utils.ts  format.ts  searchSchemas.ts
ui/src/routes/: $.tsx  __root.tsx  app.$host.tsx  index.tsx  run.$runId.tsx
ui/src/routes/demo/: store.tsx
