[package]
name = "pennies"
version = "0.0.3"
edition = "2024"
repository = "https://github.com/frectonz/pennies"

[dependencies]
async-trait = "0.1.89"
clap = { version = "4.5.53", features = ["derive"] }
color-eyre = "0.6.5"
http = "1.4.0"
jiff = { version = "0.2.16", features = ["serde"] }
once_cell = "1.21.3"
pingora = { version = "0.6", features = ["proxy", "time"] }
reqwest = "0.12.24"
serde = { version = "1.0.228", features = ["derive"] }
shell-words = "1.1.1"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
