[package]
name = "penny"
version = "0.0.10"
edition = "2024"
repository = "https://github.com/frectonz/penny"

[dependencies]
async-trait = "0.1.89"
axum = "0.8.8"
clap = { version = "4.5.53", features = ["derive"] }
color-eyre = "0.6.5"
http = "1.4.0"
jiff = { version = "0.2.16", features = ["serde"] }
mime_guess = "2.0.5"
once_cell = "1.21.3"
pingora = { version = "0.6", features = ["proxy", "time"] }
reqwest = "0.12.24"
rust-embed = "8.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
shell-words = "1.1.1"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-retry = "0.3.0"
toml = "0.9.8"
tower-http = { version = "0.6.8", features = ["cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
ulid = "1.2.1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
