[package]
name = "penny"
version = "0.0.17"
edition = "2024"
repository = "https://github.com/frectonz/penny"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[dependencies]
async-trait = "0.1.89"
axum = "0.8.8"
base64 = "0.22.1"
bytes = "1.11.1"
clap = { version = "4.5.57", features = ["derive", "env", "color"] }
color-eyre = "0.6.5"
http = "1.4.0"
instant-acme = "0.8.4"
jiff = { version = "0.2.19", features = ["serde"] }
mime_guess = "2.0.5"
pem = "3.0.6"
pingora = { version = "0.7.0", features = ["proxy", "time", "openssl"] }
rcgen = "0.14.7"
reqwest = "0.13.2"
rust-embed = "8.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
shell-words = "1.1.1"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.49.0", features = ["full"] }
tokio-retry = "0.3.0"
toml = "0.9.11"
tower-http = { version = "0.6.8", features = ["cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
ulid = "1.2.1"
x509-parser = "0.18.1"
